RI-7269 - Fix major discrepancies between the DS previews and the implementation around the main content under the new navigation - updated spacing under the navigation to be handled in one place

--- a/redisinsight/ui/src/pages/browser/components/browser-search-panel/styles.module.scss
+++ b/redisinsight/ui/src/pages/browser/components/browser-search-panel/styles.module.scss
@@ -1,6 +1,6 @@
 .content {
   width: 100%;
-  padding: 16px;
+  padding: 0 16px 16px 16px;
 
   display: flex;
   justify-content: space-between;
